src/test/resources/typeSystemTestModels/valid/expressions/BooleanAndOrValid.java
package typeSystemTestModels.valid.expressions;

public class BooleanAndOrValid {
  boolean a = true && false;
  boolean b = true || false;
}